# Assessment_12-11

./: README.md
Assessment_1/: README.md  alembic.ini  requirements.txt
Assessment_1/app/: crud.py  database.py  db_script.py  main.py  models.py  schemas.py
Assessment_1/app/routes/: availability.py  booking.py
Assessment_1/migrations/versions/: 275d4b7493ad_add_booking_id_column_to_booking_table.py  a9c909393674_add_booking_id_column_to_booking_table.py  fe835c5d004c_add_booking_id_column_to_booking_table.py
Assessment_2/: README.md  create_vector_db.py  pyproject.toml  requirements.txt  testing.py
Assessment_2/data/: clinic_info.json
Assessment_2/src/: chatbot.py  main.py
