[tool.poetry]
name = "clinic-chatbot"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
uvicorn = "0.34.0"
fastapi = "0.111.1"
gunicorn = "23.0.0"
python-dotenv = "1.0.0"
pydantic = "^2.12.4"
langchain = "^1.0.5"
chromadb = "^1.3.4"
langchain-chroma = "^1.0.0"
langchain-community = "^0.4.1"
langchain-core = "^1.0.4"
langchain-ollama = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"